[project]
name = "md-wordcloud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mecab-python3>=1.0.12",
    "pillow>=12.0.0",
    "python-frontmatter>=1.1.0",
    "unidic-lite>=1.0.8",
    "wordcloud>=1.9.5",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.16.1",
    "ruff>=0.12.1",
]
